# livethetrader

./: .gitignore  AI_  AI_Architect.md  AI_Developer.md  AI_Interface.md  AI_MACHINE_LEARNING.md  AI_Revisor.md  AI_Strategy.md  AI_architect.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration.md  contracts.md  dod.md  dod_checklist.md  interface.md
src/livethetrader/: __init__.py  models.py
src/livethetrader/api/: __init__.py  http_server.py  service.py
src/livethetrader/backtest/: __init__.py  deployment_gate.py  runner.py
src/livethetrader/config/: __init__.py  settings.py
src/livethetrader/dashboard/: __init__.py  contract.py
src/livethetrader/indicators/: __init__.py  core.py  service.py
src/livethetrader/ingestion/: __init__.py  base.py  mock_source.py  real_adapter.py
src/livethetrader/interface/: __init__.py  client.py  console.py  models.py  service.py
src/livethetrader/logging/: __init__.py  core.py  json_formatter.py
src/livethetrader/market_data/: __init__.py  aggregator.py
src/livethetrader/ml/: __init__.py  pipeline.py  train_cli.py
src/livethetrader/risk/: manager.py
src/livethetrader/signal_engine/: engine.py
src/livethetrader/strategy/: __init__.py  (+1 more)
tests/: conftest.py  test_backtest_runner.py  test_config_logging.py  test_contract_models.py  test_dashboard_contract.py  test_dashboard_http_contract.py  test_interface_communication.py  test_interface_console.py  test_ml_pipeline.py  test_real_adapter.py  test_signal_service.py  test_ui_app_refresh.py  test_ui_models.py
ui/: README.md  app.py
(+3 files in other folders)
