[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livethetrader"
version = "0.1.0"
description = "Modular multi-timeframe trading signal engine"
requires-python = ">=3.11"

[project.optional-dependencies]
ui = [
  "streamlit>=1.38",
  "plotly>=5.24",
  "pandas>=2.2",
]
dev = [
  "pytest>=9.0",
  "pytest-cov>=5.0",
  "ruff>=0.14",
  "mypy>=1.19",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
  "--cov=livethetrader",
  "--cov-report=term-missing",
  "--cov-report=xml:artifacts/coverage.xml",
  "--junitxml=artifacts/junit.xml",
  "--cov-fail-under=70",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
